--- a/src/index.njk
+++ b/src/index.njk
@@ -1,17 +1,33 @@
 ---
-title: 'Index'
+title: 'Hjem'
 eleventyExcludeFromCollections: true
+bodyClass: 'bg-purple-50'
 ---
 {% extends 'base.njk' %}
 
+{% block styles %}{% endblock %}
+
 {% block content %}
-  <main class="px-5 pt-8 sm:px-8">
-    <div class="grid max-w-screen-xl gap-3 mx-auto md:gap-6 xs:w-11/12 ">
-      <div class="grid w-full max-w-5xl gap-3 mx-auto text-xl xl:w-10/12 md:gap-6">
-        {% for page in collections.all %}
-          <a class="px-8 py-6 bg-white rounded-md shadow hover:bg-lightblue-50" href="{{ page.url }}">{{ page.data.title }}</a>
+  <main class="p-4 sm:px-[4%] sm:py-[2%] font-mono">
+    <h1 class="text-xl font-semibold">{{ site.title }}</h1>
+    <nav>
+      <ul class="grid gap-4 mt-8 md:gap-8 grid-cols-cards">
+        {% for page in collections.all | sort(false, false, 'data.order') %}
+          <li class="grid">
+            <div class="relative flex flex-col gap-1 content-start p-8 sm:pt-[60%] sm:pb-12 bg-white border-l-[6px] border-purple-800/40 rounded-r group hover:bg-purple-500">
+              <p class="text-xs font-semibold tracking-wider uppercase">
+                {% for tag in page.data.tags %}
+                  <span class="inline-block px-1.5 py-0.5 text-white rounded-sm bg-purple-600/80 group-hover:bg-purple-800">{{ tag | title }}</span>
+                {% endfor %}
+              </p>
+              <h2 class="text-xl font-semibold text-purple-800 sm:text-3xl group-hover:text-white">
+                <a class="after:absolute after:inset-0" href="{{ page.url }}">{{ page.data.title }}</a>
+              </h2>
+              <p class="self-stretch mt-1 font-semibold sm:mt-4 text-purple-800/60 group-hover:text-purple-100">{{ page.data.description | safe }}</p>
+            </div>
+          </li>
         {% endfor %}
-      </div>
-    </div>
+      </ul>
+    </nav>
   </main>
 {% endblock %}
