--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,29 +1,53 @@
 <!DOCTYPE html>
-<html lang="no" class="h-full text-gray-900 bg-white font-source-sans">
-<head>
-  <meta charset="UTF-8">
-  <meta name="robots" content="noindex">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="" />
-  <title>
-    {% if title %}
-    {{ title }} &ndash;
+<html lang="no" class="h-full antialiased leading-normal text-gray-900 bg-white font-source-sans">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="robots" content="noindex" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>
+      {% if title %}
+        {{ title }} &ndash;
     {% endif %}
-    {{ site.title }}
-  </title>
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2299%22>🧑‍💻</text></svg>">
-  <link rel="stylesheet" href="/main.min.css" type="text/css" />
-  <link rel="preload" href="/fonts/source-sans-pro-regular-webfont.woff2" as="font" type="font/woff2" crossorigin />
-  <link rel="preload" href="/fonts/source-sans-pro-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin />
-  <script src="/main.min.js" type="text/javascript" defer></script>
-</head>
-<body class="min-h-full overflow-y-scroll" x-data="{ menuOpen: false, searchOpen: false }">
-  <nav id="site-skiplinks" class="absolute flex flex-col items-center p-1" aria-label="Hopp til innhold">
-    <a href="#" class="sr-only">Hovedmeny</a>
-    <a href="#" class="sr-only">Søk</a>
-    <a href="#maincontent" class="sr-only">Hovedinnhold</a>
-  </nav>
-  {% block content %}{% endblock %}
-</body>
+      {{ site.title }}
+    </title>
+    <meta name="description" content="..." />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2299%22>🧑‍💻</text></svg>" />
+    <link rel="preconnect" href="https://marvelous-biscochitos-50396c.netlify.app" crossorigin />
+    <link rel="preload" href="/fonts/Source_Sans_3_latin.woff2" as="font" type="font/woff2" crossorigin>
+    <style>
+      @font-face {
+        font-family: "Source Sans Pro";
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+        src: url("/fonts/Source_Sans_3_latin.woff2") format("woff2"), url("/fonts/Source_Sans_3_latin.woff2") format("woff");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+
+      @font-face {
+        font-family: "Source Sans Pro";
+        font-weight: 400;
+        font-style: italic;
+        font-display: swap;
+        src: url("/fonts/Source_Sans_3_latin.woff2") format("woff2"), url("/fonts/Source_Sans_3_latin.woff2") format("woff");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+
+      @font-face {
+        font-family: "Source Sans Pro";
+        font-weight: 600;
+        font-style: normal;
+        font-display: swap;
+        src: url("/fonts/Source_Sans_3_latin.woff2") format("woff2"), url("/fonts/Source_Sans_3_latin.woff2") format("woff");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+    </style>
+    <link rel="stylesheet" href="/main.min.css" type="text/css" />
+    {% block styles %}{% endblock %}
+    {% block script %}{% endblock %}
+  </head>
+  <body class="min-h-full overflow-y-scroll {{ bodyClass }}" x-data="{ menuOpen: false, searchOpen: false }">
+    {% block content %}{% endblock %}
+  </body>
 </html>
