--- a/src/main.css
+++ b/src/main.css
@@ -2,179 +2,195 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
-  @font-face {
-    font-family: "Source Sans Pro";
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-    src: url("/fonts/source-sans-pro-regular-webfont.woff2") format("woff2"),
-      url("/fonts/source-sans-pro-regular-webfont.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Source Sans Pro";
-    font-weight: 400;
-    font-style: italic;
-    font-display: swap;
-    src: url("/fonts/source-sans-pro-italic-webfont.woff2") format("woff2"),
-      url("/fonts/source-sans-pro-italic-webfont.woff") format("woff");
-  }
-  @font-face {
-    font-family: "Source Sans Pro";
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-    src: url("/fonts/source-sans-pro-semibold-webfont.woff2") format("woff2"),
-      url("/fonts/source-sans-pro-semibold-webfont.woff") format("woff");
-  }
-}
-
-@layer components {
-  .markup > * + * {
-    @apply mt-6;
-  }
-  .markup > h3 {
-    @apply text-2xl font-bold;
-  }
-}
-
-@layer components {
-  .navds-stepper {
-    --navds-stepper-number: 1.75rem;
-
-    color: theme('colors.blue.500');
-    font-weight: 600;
-  }
-  .navds-stepper--horizontal {
-    display: flex;
-    text-align: center;
-    align-items: start;
-  }
-  .navds-stepper__item {
-    flex: 1 1 100%;
-    display: grid;
-    grid-template-rows: [line-1] auto [step-start] var(--navds-stepper-number) [line-2 step-end] auto;
-    grid-template-columns: var(--navds-stepper-number) auto;
-    justify-items: start;
-    gap: 0.5rem;
-  }
-  .navds-stepper__line {
-    background-color: theme('colors.gray.400');
-    width: 0.125rem;
-    height: 100%;
-    min-height: 0.5rem;
-    justify-self: center;
-    grid-column: 1;
-  }
-  .navds-stepper__line--1 {
-    grid-row: line-1;
-    display: none;
-  }
-  .navds-stepper__line--2 {
-    grid-row: line-2;
-   }
-
-   :where(.navds-stepper__item:last-of-type) .navds-stepper__line--2 {
-    display: none;
-  }
-  .navds-stepper__step {
-    grid-row: 2 / -1;
-    grid-column: 1 / -1;
-    display: grid;
-    grid-template-columns: [number] var(--navds-stepper-number) [label] auto;
-    gap: 0.5rem;
-    align-items: baseline;
-    justify-items: start;
-    margin-bottom: 1.75rem;
-  }
-  :where(.navds-stepper__step):focus {
-    outline: 3px solid theme('colors.blue.800');
-    isolation: isolate;
-  }
-  .navds-stepper__circle {
-    display: inline-grid;
-    place-items: center;
-    width: var(--navds-stepper-number);
-    height: var(--navds-stepper-number);
-    border: 2px solid currentColor;
-    border-radius: 999px;
-    line-height: 1;
-    grid-column: number;
-    flex-shrink: 0;
-  }
-  .navds-stepper__content {
-    display: block;
-    min-width: fit-content;
-    grid-column: label;
-  }
-
-
-
-  /* Horizontal */
-  :where(.navds-stepper--horizontal) .navds-stepper__item {
-    grid-template-columns:
-      [line-1-start] 1fr
-      [step-start] auto
-      [line-1-end] var(--navds-stepper-number)
-      [line-2-start] auto
-      [step-end] 1fr
-      [line-2-end];
-    grid-template-rows: var(--navds-stepper-number) auto;
-  }
-  :where(.navds-stepper--horizontal) .navds-stepper__line {
-    height: 0.125rem;
-    width: 100%;
-    min-height: auto;
-    grid-row: 1;
-    display: block;
-    align-self: center;
-  }
-  :where(.navds-stepper--horizontal) .navds-stepper__line--1 {
-    grid-column: line-1;
-  }
-  :where(.navds-stepper--horizontal) .navds-stepper__line--2 {
-    grid-column: line-2;
-   }
-  :where(.navds-stepper--horizontal .navds-stepper__item:first-of-type) .navds-stepper__line--1,
-  :where(.navds-stepper--horizontal .navds-stepper__item:last-of-type) .navds-stepper__line--2 {
-    visibility: hidden;
-  }
-
-  :where(.navds-stepper--horizontal) .navds-stepper__step {
-    grid-column: step;
-    grid-row: 1 / -1;
-    grid-template-rows: [number] var(--navds-stepper-number) [label] auto;
-    grid-template-columns: [label-start] auto [number] var(--navds-stepper-number) [label-end] auto;
-    align-items: center;
-    justify-items: center;
-    display: grid;
-  }
-  :where(.navds-stepper--horizontal) .navds-stepper__circle {
-    grid-row: number;
-  }
-  :where(.navds-stepper--horizontal) .navds-stepper__content {
-    grid-row: label;
-    grid-column: 1 / -1;
-    max-width: 24ch;
-  }
-
-
-
-  /* Active */
-  :where(.navds-stepper__step--active) .navds-stepper__content {
-    color: theme('colors.gray.800');
-  }
-  :where(.navds-stepper__step:not(.navds-stepper__step--active):hover) .navds-stepper__circle,
-  :where(.navds-stepper__step:not(.navds-stepper__step--active):focus) .navds-stepper__circle {
-    background-color: theme('colors.blue.100');
-  }
-  :where(.navds-stepper__step:not(.navds-stepper__step--active):hover) .navds-stepper__content {
-    text-decoration: underline;
-  }
-  :where(.navds-stepper__step--active) .navds-stepper__circle {
-    background-color: theme('colors.deepblue.500');
-    border-color: theme('colors.deepblue.500');
-    color: theme('colors.white');
+  :root {
+    --navds-spacing-32: 8rem;
+    --navds-spacing-24: 6rem;
+    --navds-spacing-20: 5rem;
+    --navds-spacing-18: 4.5rem;
+    --navds-spacing-16: 4rem;
+    --navds-spacing-14: 3.5rem;
+    --navds-spacing-12: 3rem;
+    --navds-spacing-11: 2.75rem;
+    --navds-spacing-10: 2.5rem;
+    --navds-spacing-9: 2.25rem;
+    --navds-spacing-8: 2rem;
+    --navds-spacing-7: 1.75rem;
+    --navds-spacing-6: 1.5rem;
+    --navds-spacing-5: 1.25rem;
+    --navds-spacing-4: 1rem;
+    --navds-spacing-3: 0.75rem;
+    --navds-spacing-2: 0.5rem;
+    --navds-spacing-1: 0.25rem;
+    --navds-shadow-card: 0 1px 3px 0 rgba(38, 38, 38, 0.2), 0 2px 1px 0 rgba(38, 38, 38, 0.12), 0 1px 1px 0 rgba(38, 38, 38, 0.14);
+    --navds-shadow-xlarge: 0 8px 10px -6px rgba(0, 0, 0, 0.05), 0 25px 50px -5px rgba(0, 0, 0, 0.1);
+    --navds-shadow-large: 0 4px 6px -4px rgba(0, 0, 0, 0.05), 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+    --navds-shadow-medium: 0 2px 4px -2px rgba(0, 0, 0, 0.05), 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+    --navds-shadow-small: 0 1px 2px -1px rgba(0, 0, 0, 0.05), 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+    --navds-shadow-xsmall: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
+    --navds-global-color-white: rgba(255, 255, 255, 1);
+    --navds-global-color-transparent: rgba(255, 255, 255, 0);
+    --navds-global-color-red-900: rgba(72, 9, 0, 1);
+    --navds-global-color-red-800: rgba(106, 18, 4, 1);
+    --navds-global-color-red-700: rgba(136, 29, 12, 1);
+    --navds-global-color-red-600: rgba(163, 42, 23, 1);
+    --navds-global-color-red-500: rgba(186, 58, 38, 1);
+    --navds-global-color-red-400: rgba(208, 92, 74, 1);
+    --navds-global-color-red-300: rgba(225, 128, 113, 1);
+    --navds-global-color-red-200: rgba(239, 168, 157, 1);
+    --navds-global-color-red-100: rgba(249, 210, 204, 1);
+    --navds-global-color-red-50: rgba(253, 232, 230, 1);
+    --navds-global-color-purple-900: rgba(31, 20, 47, 1);
+    --navds-global-color-purple-800: rgba(48, 31, 70, 1);
+    --navds-global-color-purple-700: rgba(65, 43, 93, 1);
+    --navds-global-color-purple-600: rgba(82, 56, 116, 1);
+    --navds-global-color-purple-500: rgba(99, 70, 137, 1);
+    --navds-global-color-purple-400: rgba(130, 105, 162, 1);
+    --navds-global-color-purple-300: rgba(161, 141, 187, 1);
+    --navds-global-color-purple-200: rgba(192, 178, 210, 1);
+    --navds-global-color-purple-100: rgba(224, 216, 233, 1);
+    --navds-global-color-purple-50: rgba(239, 236, 244, 1);
+    --navds-global-color-orange-900: rgba(82, 51, 0, 1);
+    --navds-global-color-orange-800: rgba(125, 76, 0, 1);
+    --navds-global-color-orange-700: rgba(168, 100, 0, 1);
+    --navds-global-color-orange-600: rgba(212, 123, 0, 1);
+    --navds-global-color-orange-500: rgba(255, 145, 0, 1);
+    --navds-global-color-orange-400: rgba(255, 170, 51, 1);
+    --navds-global-color-orange-300: rgba(255, 193, 102, 1);
+    --navds-global-color-orange-200: rgba(255, 215, 153, 1);
+    --navds-global-color-orange-100: rgba(255, 236, 204, 1);
+    --navds-global-color-orange-50: rgba(255, 249, 240, 1);
+    --navds-global-color-nav-red: rgba(195, 0, 0, 1);
+    --navds-global-color-limegreen-900: rgba(71, 78, 0, 1);
+    --navds-global-color-limegreen-800: rgba(102, 110, 0, 1);
+    --navds-global-color-limegreen-700: rgba(127, 137, 0, 1);
+    --navds-global-color-limegreen-600: rgba(147, 158, 0, 1);
+    --navds-global-color-limegreen-500: rgba(162, 173, 0, 1);
+    --navds-global-color-limegreen-400: rgba(193, 203, 51, 1);
+    --navds-global-color-limegreen-300: rgba(217, 227, 102, 1);
+    --navds-global-color-limegreen-200: rgba(236, 243, 153, 1);
+    --navds-global-color-limegreen-100: rgba(249, 252, 204, 1);
+    --navds-global-color-limegreen-50: rgba(253, 255, 230, 1);
+    --navds-global-color-lightblue-900: rgba(19, 72, 82, 1);
+    --navds-global-color-lightblue-800: rgba(35, 107, 125, 1);
+    --navds-global-color-lightblue-700: rgba(54, 141, 168, 1);
+    --navds-global-color-lightblue-600: rgba(76, 173, 205, 1);
+    --navds-global-color-lightblue-500: rgba(102, 203, 236, 1);
+    --navds-global-color-lightblue-400: rgba(124, 218, 248, 1);
+    --navds-global-color-lightblue-300: rgba(151, 230, 255, 1);
+    --navds-global-color-lightblue-200: rgba(181, 241, 255, 1);
+    --navds-global-color-lightblue-100: rgba(216, 249, 255, 1);
+    --navds-global-color-lightblue-50: rgba(235, 252, 255, 1);
+    --navds-global-color-green-900: rgba(0, 59, 15, 1);
+    --navds-global-color-green-800: rgba(0, 85, 25, 1);
+    --navds-global-color-green-700: rgba(0, 106, 35, 1);
+    --navds-global-color-green-600: rgba(0, 124, 46, 1);
+    --navds-global-color-green-500: rgba(6, 137, 58, 1);
+    --navds-global-color-green-400: rgba(51, 170, 95, 1);
+    --navds-global-color-green-300: rgba(102, 199, 134, 1);
+    --navds-global-color-green-200: rgba(153, 222, 173, 1);
+    --navds-global-color-green-100: rgba(204, 241, 214, 1);
+    --navds-global-color-green-50: rgba(243, 252, 245, 1);
+    --navds-global-color-gray-900: rgba(38, 38, 38, 1);
+    --navds-global-color-gray-800: rgba(64, 64, 64, 1);
+    --navds-global-color-gray-700: rgba(89, 89, 89, 1);
+    --navds-global-color-gray-600: rgba(112, 112, 112, 1);
+    --navds-global-color-gray-500: rgba(143, 143, 143, 1);
+    --navds-global-color-gray-400: rgba(176, 176, 176, 1);
+    --navds-global-color-gray-300: rgba(207, 207, 207, 1);
+    --navds-global-color-gray-200: rgba(229, 229, 229, 1);
+    --navds-global-color-gray-100: rgba(241, 241, 241, 1);
+    --navds-global-color-gray-50: rgba(247, 247, 247, 1);
+    --navds-global-color-deepblue-900: rgba(0, 36, 58, 1);
+    --navds-global-color-deepblue-800: rgba(0, 52, 83, 1);
+    --navds-global-color-deepblue-700: rgba(0, 67, 103, 1);
+    --navds-global-color-deepblue-600: rgba(0, 80, 119, 1);
+    --navds-global-color-deepblue-500: rgba(0, 91, 130, 1);
+    --navds-global-color-deepblue-400: rgba(51, 128, 165, 1);
+    --navds-global-color-deepblue-300: rgba(102, 163, 196, 1);
+    --navds-global-color-deepblue-200: rgba(153, 196, 221, 1);
+    --navds-global-color-deepblue-100: rgba(204, 226, 240, 1);
+    --navds-global-color-deepblue-50: rgba(230, 241, 248, 1);
+    --navds-global-color-blue-900: rgba(0, 34, 82, 1);
+    --navds-global-color-blue-800: rgba(0, 52, 125, 1);
+    --navds-global-color-blue-700: rgba(0, 69, 156, 1);
+    --navds-global-color-blue-600: rgba(0, 86, 180, 1);
+    --navds-global-color-blue-500: rgba(0, 103, 197, 1);
+    --navds-global-color-blue-400: rgba(51, 134, 224, 1);
+    --navds-global-color-blue-300: rgba(102, 165, 244, 1);
+    --navds-global-color-blue-200: rgba(153, 195, 255, 1);
+    --navds-global-color-blue-100: rgba(204, 225, 255, 1);
+    --navds-global-color-blue-50: rgba(230, 240, 255, 1);
+    --navds-border-radius-full: 9999px;
+    --navds-border-radius-xlarge: 12px;
+    --navds-border-radius-large: 8px;
+    --navds-border-radius-medium: 4px;
+    --navds-border-radius-small: 2px;
+    --navds-z-index-focus: 10;
+    --navds-z-index-popover: 1000;
+    --navds-z-index-modal: 2000;
+    --navds-font-weight-regular: 400;
+    --navds-font-weight-bold: 600;
+    --navds-font-size-small: 0.875rem;
+    --navds-font-size-medium: 1rem;
+    --navds-font-size-large: 1.125rem;
+    --navds-font-size-xlarge: 1.25rem;
+    --navds-font-size-heading-xsmall: 1.125rem;
+    --navds-font-size-heading-small: 1.25rem;
+    --navds-font-size-heading-medium: 1.5rem;
+    --navds-font-size-heading-large: 1.75rem;
+    --navds-font-size-heading-xlarge: 2rem;
+    --navds-font-size-heading-2xlarge: 2.5rem;
+    --navds-font-line-height-medium: 1.25rem;
+    --navds-font-line-height-large: 1.5rem;
+    --navds-font-line-height-xlarge: 1.75rem;
+    --navds-font-line-height-heading-xsmall: 1.5rem;
+    --navds-font-line-height-heading-small: 1.75rem;
+    --navds-font-line-height-heading-medium: 2rem;
+    --navds-font-line-height-heading-large: 2.25rem;
+    --navds-font-line-height-heading-xlarge: 2.5rem;
+    --navds-font-line-height-heading-2xlarge: 3.25rem;
+    --navds-font-family: "Source Sans Pro", Arial, sans-serif;
+    --navds-shadow-popover: 0 2px 4px 0 var(--navds-global-color-gray-200);
+    --navds-semantic-color-text: var(--navds-global-color-gray-900);
+    --navds-semantic-color-text-muted: var(--navds-global-color-gray-600);
+    --navds-semantic-color-text-inverted: var(--navds-global-color-white);
+    --navds-semantic-color-link: var(--navds-global-color-blue-500);
+    --navds-semantic-color-link-visited: var(--navds-global-color-purple-500);
+    --navds-semantic-color-interaction-primary: var(--navds-global-color-blue-500);
+    --navds-semantic-color-interaction-primary-selected: var(--navds-global-color-deepblue-500);
+    --navds-semantic-color-interaction-primary-hover: var(--navds-global-color-blue-600);
+    --navds-semantic-color-interaction-primary-hover-subtle: var(--navds-global-color-blue-50);
+    --navds-semantic-color-interaction-danger: var(--navds-global-color-red-500);
+    --navds-semantic-color-interaction-danger-selected: var(--navds-global-color-red-700);
+    --navds-semantic-color-interaction-danger-hover: var(--navds-global-color-red-600);
+    --navds-semantic-color-focus: var(--navds-global-color-blue-800);
+    --navds-semantic-color-focus-inverted: var(--navds-global-color-blue-200);
+    --navds-semantic-color-feedback-warning-icon: var(--navds-global-color-orange-500);
+    --navds-semantic-color-feedback-warning-border: var(--navds-global-color-orange-600);
+    --navds-semantic-color-feedback-warning-background: var(--navds-global-color-orange-100);
+    --navds-semantic-color-feedback-success-icon: var(--navds-global-color-green-600);
+    --navds-semantic-color-feedback-success-border: var(--navds-global-color-green-500);
+    --navds-semantic-color-feedback-success-background: var(--navds-global-color-green-100);
+    --navds-semantic-color-feedback-info-icon: var(--navds-global-color-lightblue-700);
+    --navds-semantic-color-feedback-info-border: var(--navds-global-color-lightblue-700);
+    --navds-semantic-color-feedback-info-background: var(--navds-global-color-lightblue-100);
+    --navds-semantic-color-feedback-danger-text: var(--navds-global-color-red-500);
+    --navds-semantic-color-feedback-danger-icon: var(--navds-global-color-red-500);
+    --navds-semantic-color-feedback-danger-border: var(--navds-global-color-red-500);
+    --navds-semantic-color-feedback-danger-background: var(--navds-global-color-red-100);
+    --navds-semantic-color-divider: var(--navds-global-color-gray-200);
+    --navds-semantic-color-component-background-light: var(--navds-global-color-white);
+    --navds-semantic-color-component-background-inverted: var(--navds-global-color-gray-900);
+    --navds-semantic-color-component-background-alternate: var(--navds-global-color-gray-50);
+    --navds-semantic-color-canvas-background: var(--navds-global-color-gray-100);
+    --navds-semantic-color-canvas-background-light: var(--navds-global-color-white);
+    --navds-semantic-color-canvas-background-inverted: var(--navds-global-color-gray-900);
+    --navds-semantic-color-border: var(--navds-global-color-gray-600);
+    --navds-semantic-color-border-muted: var(--navds-global-color-gray-400);
+    --navds-semantic-color-border-inverted: var(--navds-global-color-gray-200);
+    --navds-shadow-focus-inverted: 0 0 0 3px var(--navds-semantic-color-focus-inverted);
+    --navds-shadow-focus: 0 0 0 3px var(--navds-semantic-color-focus);
   }
 }
