--- a/src/index.njk
+++ b/src/index.njk
@@ -11,19 +11,19 @@ bodyClass: 'bg-purple-50'
   <main class="p-4 sm:px-[4%] sm:py-[2%] font-mono">
     <h1 class="text-xl font-semibold">{{ site.title }}</h1>
     <nav>
-      <ul class="grid gap-4 mt-8 md:gap-8 grid-cols-cards">
+      <ul class="grid gap-3 mt-8 md:gap-[2%] grid-cols-cards">
         {% for page in collections.all | sort(false, false, 'data.order') %}
           <li class="grid">
-            <div class="relative flex flex-col gap-1 content-start p-8 sm:pt-[60%] sm:pb-12 bg-white border-l-[6px] border-purple-800/40 rounded-r group hover:bg-purple-500">
+            <div class="relative motion-safe:hover:translate-y-1 rounded-l-sm transition ease-out duration-100 hover:duration-300 flex flex-col shadow-xl hover:shadow hover:shadow-purple-600/40 shadow-purple-400/20 gap-1 content-start p-8 sm:pt-[50%] sm:pb-[15%] bg-white border-l-[6px] border-purple-800/40 rounded-r group hover:bg-purple-400">
               <p class="text-xs font-semibold tracking-wider uppercase">
                 {% for tag in page.data.tags %}
-                  <span class="inline-block px-1.5 py-0.5 text-white rounded-sm bg-purple-600/80 group-hover:bg-purple-800">{{ tag | title }}</span>
+                  <span class="inline-block px-1 py-0.5 leading-tight text-white rounded-sm bg-purple-600/80 group-hover:bg-purple-800">{{ tag | title }}</span>
                 {% endfor %}
               </p>
-              <h2 class="text-xl font-semibold text-purple-800 sm:text-3xl group-hover:text-white">
+              <h2 class="text-xl font-semibold text-purple-600 sm:text-3xl group-hover:text-white">
                 <a class="after:absolute after:inset-0" href="{{ page.url }}">{{ page.data.title }}</a>
               </h2>
-              <p class="self-stretch mt-1 font-semibold sm:mt-4 text-purple-800/60 group-hover:text-purple-100">{{ page.data.description | safe }}</p>
+              <p class="self-stretch mt-1 font-semibold text-purple-800/60 group-hover:text-purple-100">{{ page.data.description | safe }}</p>
             </div>
           </li>
         {% endfor %}
