--- a/src/maler/soknad.njk
+++ b/src/maler/soknad.njk
@@ -1,7 +1,7 @@
 ---
 title: 'Søknad'
-description: 'Grunnoppsett for alle søknader'
-order: 3
+description: 'Grunnoppsett for oppdelte søknader'
+order: 4
 stepperList:
   -
     text: 'Personalia'
@@ -147,7 +147,6 @@ stepperList:
         <h1 class="text-3xl font-semibold leading-tight md:text-4xl">Søknad om dagpenger</h1>
 
         <div class="mt-3 md:grid md:grid-flow-row-dense md:gap-20 md:grid-cols-12">
-
           <div class="px-4 py-3 mb-3 -mx-4 md:col-span-8 md:hidden" x-data="{ stepperOpen: false }" x-bind:class="stepperOpen && 'bg-blue-50 xs:rounded md:bg-transparent'">
             <p class="text-sm">Steg 5 av 14</p>
             <div class="relative flex items-center justify-between gap-8">
