--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,49 +1,58 @@
 <header class="relative z-30 shadow-border bg-white {% if page.fileSlug === 'forsiden' %}shadow{% endif %}">
-  <nav id="site-skiplinks" class="absolute flex flex-col items-center p-1" aria-label="Hopp til innhold">
+  {# <nav id="site-skiplinks" class="absolute flex flex-col items-center p-1" aria-label="Hopp til innhold">
     <a href="#" class="sr-only">Hovedmeny</a>
     <a href="#" class="sr-only">Søk</a>
     <a href="#maincontent" class="sr-only">Hovedinnhold</a>
-  </nav>
+  </nav> #}
   <div class="relative px-4 md:px-8">
     <div class="max-w-screen-xl mx-auto xs:w-[95%]">
       <nav class="flex items-center w-full gap-4">
-        <a href="/" class="block my-4">
+        <a href="#" class="block my-4">
           <svg class="w-16 h-5" width="64" height="20" fill="none" aria-hidden="true" role="img" focusable="false"><path fill-rule="evenodd" clip-rule="evenodd" d="M63.48.52h-6.66s-.459 0-.621.406l-3.685 11.287L48.832.926c-.163-.405-.624-.405-.624-.405H35.404a.514.514 0 00-.51.507v3.833c0-3.04-3.233-4.34-5.127-4.34-4.24 0-7.078 2.794-7.962 7.043-.048-2.819-.282-3.829-1.041-4.863-.349-.507-.852-.932-1.4-1.285-1.13-.662-2.145-.895-4.324-.895h-2.56s-.462 0-.625.405L9.526 6.7V1.028A.512.512 0 009.02.521H3.097s-.457 0-.624.405L.053 6.93s-.242.6.31.6H2.64v11.44c0 .284.223.51.508.51h5.87a.509.509 0 00.508-.51V7.53h2.289c1.313 0 1.59.036 2.101.274.308.117.585.352.737.623.31.583.387 1.283.387 3.348v7.195c0 .284.228.51.51.51h5.626s.636 0 .887-.63l1.247-3.083c1.658 2.324 4.387 3.712 7.779 3.712h.741s.64 0 .893-.628l2.172-5.381v5.5a.51.51 0 00.51.51h5.743s.634 0 .888-.63c0 0 2.297-5.705 2.306-5.748h.004c.088-.475-.511-.475-.511-.475h-2.05V2.836l6.45 16.015c.251.628.886.628.886.628h6.786s.638 0 .89-.628l7.151-17.716c.247-.614-.469-.614-.469-.614zM34.893 12.628h-3.858a2.784 2.784 0 110-5.57h1.079a2.788 2.788 0 012.78 2.787v2.783z" fill="#DE2E2E" /></svg>
           <span class="sr-only">NAV</span>
         </a>
         <div class="self-stretch hidden px-6 md:grid">
-          <ul class="flex justify-center text-lg text-gray-700" role="tablist">
-            <li role="tab" aria-selected="true" class="flex">
-              <a href="#" class="flex items-center px-3 pb-5 font-semibold text-gray-900 border-b-4 border-blue-500 pt-7">
+          <ul class="flex justify-center gap-4 text-lg text-gray-700" role="tablist">
+            <li role="tab" aria-selected="true" class="grid">
+              <a href="#" class="flex items-center px-1.5 pb-5 font-semibold text-gray-900 border-b-4 border-blue-500 pt-7">
                 Privat
               </a>
             </li>
-            <li role="tab" aria-selected="false" class="flex">
-              <a href="#" class="flex items-center px-3 pb-5 border-b-4 pt-7 border-white/0 hover:border-gray-100">
+            <li role="tab" aria-selected="false" class="grid">
+              <a href="#" class="flex items-center px-1.5 pb-5 border-b-4 pt-7 border-white/0 hover:border-gray-200">
                 Arbeidsgiver
               </a>
             </li>
-            <li role="tab" aria-selected="false" class="flex">
-              <a href="#" class="flex items-center px-3 pb-5 border-b-4 pt-7 border-white/0 hover:border-gray-100">
+            <li role="tab" aria-selected="false" class="grid">
+              <a href="#" class="flex items-center px-1.5 pb-5 border-b-4 pt-7 border-white/0 hover:border-gray-200">
                 Samarbeidspartner
               </a>
             </li>
           </ul>
         </div>
         <div class="flex items-end gap-2 pt-2 pb-2 ml-auto -mr-3">
-          <button class="flex flex-wrap items-center justify-center px-2 py-2 font-semibold text-blue-500 rounded gap-x-2 md:px-3 xs:text-lg hover:bg-blue-50" type="button" x-on:click="menuOpen = !menuOpen, searchOpen = false">
-            <svg class="w-5 h-5 xs:w-6 xs:h-6 shrink-0" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" focusable="false" aria-hidden="true">
-              <path d="M7.20404 4.5C6.8435 5.12327 6.55555 5.79379 6.35177 6.5H0V4.5H7.20404ZM7.20404 13.5C6.8435 12.8767 6.55555 12.2062 6.35177 11.5H0V13.5H7.20404ZM18.7125 20.5L17.3121 18.5H0V20.5H18.7125Z" />
-              <path d="M10.0679 8.21299C10.4988 5.7689 12.8295 4.13693 15.2736 4.56789C17.7177 4.99885 19.3497 7.32954 18.9187 9.77363C18.4878 12.2177 16.1571 13.8497 13.713 13.4187C11.2689 12.9878 9.63693 10.6571 10.0679 8.21299ZM15.6209 2.59827C12.089 1.97551 8.72104 4.33381 8.09827 7.86569C7.47551 11.3976 9.83381 14.7656 13.3657 15.3883C14.7762 15.6371 16.1606 15.4103 17.3544 14.8232L22.1816 21.7172C22.4984 22.1696 23.1219 22.2796 23.5743 21.9628C24.0267 21.646 24.1367 21.0225 23.8199 20.5701L18.9927 13.6762C19.9529 12.7551 20.6396 11.5316 20.8883 10.1209C21.5111 6.58905 19.1528 3.22104 15.6209 2.59827Z" />
-            </svg>
-            <span class="whitespace-nowrap">Meny og søk</span>
+          <button class="flex flex-wrap items-center justify-center px-2 py-2 font-semibold text-blue-500 rounded gap-x-2 md:px-3 xs:text-lg hover:ring-2 hover:ring-blue-800" type="button" x-on:click="menuOpen = !menuOpen, loginOpen = false">
+            <template x-if="!menuOpen">
+              {{ '/src/_includes/svg/menusearch.svg' | svgContents('w-6 h-6 shrink-0') | safe }}
+            </template>
+            <template x-if="menuOpen">
+              {{ '/src/_includes/svg/close.svg' | svgContents('w-6 h-6 shrink-0') | safe }}
+            </template>
+            <span class="mt-px whitespace-nowrap">Meny</span>
           </button>
-          <a class="flex flex-wrap items-center justify-center px-2 py-2 font-semibold text-blue-500 rounded gap-x-2 md:px-3 xs:text-lg hover:bg-blue-50" href="#">
-            <svg class="w-5 h-5 -ml-1 xs:w-6 xs:h-6 shrink-0" width="24" height="24" fill="none" viewBox="0 0 24 24">
-              <path fill="currentColor" fill-rule="evenodd" d="M19 4h-5V2h5a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3h-5v-2h5c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1Zm-8.3 2.3 5.7 5.7-5.7 5.7-1.4-1.4 3.3-3.3H2v-2h10.6L9.3 7.7l1.4-1.4Z" clip-rule="evenodd" />
-            </svg>
-            <span class="whitespace-nowrap">Logg inn</span>
-          </a>
+          <button class="px-2 py-2 font-semibold text-blue-500 rounded md:px-3 xs:text-lg hover:ring-2 hover:ring-blue-800" x-on:click="loginOpen = !loginOpen, menuOpen = false" x-bind:class="loginOpen && 'bg-deepblue-50'">
+
+            <span x-show="!loginOpen" class="flex flex-wrap items-center gap-x-1">
+              {{ '/src/_includes/svg/enter.svg' | svgContents('w-6 h-6 shrink-0') | safe }}
+              <span class="mt-px whitespace-nowrap min-w-[8ch]">Logg inn</span>
+            </span>
+
+            <span x-show="loginOpen" class="flex flex-wrap items-center gap-x-1">
+              {{ '/src/_includes/svg/user.svg' | svgContents('w-6 h-6 shrink-0') | safe }}
+              <span class="mt-px whitespace-nowrap min-w-[8ch]">Min side</span>
+            </span>
+
+          </button>
         </div>
       </nav>
     </div>
@@ -51,40 +60,97 @@
 </header>
 
 {# Menu #}
-<nav class="relative z-20 hidden">
-  <div class="absolute inset-x-0 z-20 px-4 pt-6 pb-12 bg-white shadow-xl top-full md:px-8" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
-    {# <div class="max-w-screen-xl mx-auto">
+<nav class="relative z-20">
+  <div class="absolute inset-x-0 z-20 px-4 pt-8 pb-12 bg-white shadow-xl md:pt-12 top-full md:px-8" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
 
-      <form class="grid grid-cols-[1fr_auto] max-w-2xl gap-2 py-12 mx-auto ">
-        <label class="grid gap-1" for="search">
-          <span class="sr-only">Søk</span>
-        </label>
-        <input class="col-start-1 col-end-3 row-start-1 p-2 text-lg border-2 border-blue-500 rounded focus:outline-none focus:ring focus:ring-blue-800" id="search" type="text">
-        <button class="flex items-center col-start-2 row-start-1 gap-2 px-6 py-2 text-xl text-white bg-blue-500 rounded focus:outline-none focus:ring focus:ring-blue-800" type="submit">
-          <svg class="w-5 h-5" viewBox="0 0 28 28" width="28" height="28" fill="currentColor"><path d="M3.5 12C3.5 8.41015 6.41015 5.5 10 5.5C13.5899 5.5 16.5 8.41015 16.5 12C16.5 15.5899 13.5899 18.5 10 18.5C6.41015 18.5 3.5 15.5899 3.5 12ZM10 2.5C4.75329 2.5 0.5 6.75329 0.5 12C0.5 17.2467 4.75329 21.5 10 21.5C12.6243 21.5 15.0001 20.4359 16.7195 18.7156L25.4966 26.6149L27.5034 24.3851L18.488 16.2712C19.1354 14.9871 19.5 13.5362 19.5 12C19.5 6.75329 15.2467 2.5 10 2.5Z"/></svg>
-          <span>Søk</span>
-          </button>
-      </form>
-
-      <div class="gap-3 columns-[42ch] md:gap-6 mt-12">
-        {% for section in menu.sectionList %}
-          <div class="pr-4 mb-8 sm:max-w-xs break-inside-avoid">
-            <div class="text-xl font-semibold">{{ section.title }}</div>
-            <ul class="flex flex-col items-start">
-            {% for link in section.linkList %}
-              <li class="flex items-start gap-2 mt-2 text-blue-500 hover:text-blue-800 group">
-                <svg aria-hidden="true" focusable="false" class="w-5 h-5 -ml-1.5 flex-shrink-0 group-hover:translate-x-1.5 transition group-hover:ease-out group-hover:duration-200" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M9 5L16 12L9 19.1421" stroke="currentColor" stroke-width="2"/></svg>
-                <a class="text-lg leading-tight underline hover:no-underline " href="#">{{ link.text }}</a>
+    <div class="max-w-screen-xl mx-auto xs:w-[95%]">
+      <div class="flex flex-col gap-10 md:flex-row md:gap-6">
+        <div class="flex-1 md:max-w-max md:pr-12">
+          <h3 class="text-sm tracking-widest uppercase opacity-60">{{ menu.areas.title }}</h3>
+          <ul class="grid gap-2 mt-2">
+            {% for link in menu.areas.linkList %}
+              <li class="break-inside-avoid">
+                <a class="inline-flex items-center gap-2.5 px-2 py-1.5 -mx-2 text-lg leading-normal text-blue-500 no-underline rounded font-semibold hover:text-blue-600 hover:bg-blue-50 hover:underline" href="#">
+                  {% if link.icon %}
+                    {{ link.icon | svgContents('w-6 h-6 opacity-90') | safe }}
+                  {% endif %}
+                  <span class="mt-px">{{ link.text }}</span>
+                </a>
               </li>
             {% endfor %}
-            </ul>
-          </div>
-        {% endfor %}
+          </ul>
+        </div>
+
+        <div class="flex-1 md:mx-auto md:flex-none md:flex">
+          <div class="h-px bg-gray-200 md:h-auto md:mx-10 md:w-px"></div>
+        </div>
+
+        <div class="flex flex-col flex-1">
+          <h3 class="text-sm tracking-widest uppercase opacity-60">{{ menu.shortcuts.title }}</h3>
+          <ul class="mt-2 sm:columns-[33ch]">
+            {% for link in menu.shortcuts.linkList %}
+              <li>
+                <a class="inline-flex items-center gap-3 px-2 py-1 -mx-2 text-lg leading-normal text-blue-500 underline rounded hover:text-blue-80 hover:bg-blue-600 hover:text-white hover:no-underline" href="#">
+                  {% if link.icon %}
+                    {{ link.icon | svgContents('w-6 h-6 opacity-80') | safe }}
+                  {% endif %}
+                  <span class="mt-px">{{ link.text }}</span>
+                </a>
+              </li>
+            {% endfor %}
+          </ul>
+
+          <form class="w-full gap-2 pt-8 mt-auto">
+            <label class="text-sm tracking-widest uppercase opacity-60" for="search">Søk</label>
+            <div class="flex mt-2">
+              <input class="flex-1 p-2 text-lg border border-gray-300 rounded-l focus:outline-none focus:ring focus:ring-blue-800" id="search" type="text">
+              <button class="flex items-center col-start-2 row-start-1 gap-2 px-6 py-2 text-xl text-white bg-blue-500 rounded-r focus:outline-none focus:ring focus:ring-blue-800" type="submit">
+                <svg class="w-5 h-5" viewBox="0 0 28 28" width="28" height="28" fill="currentColor"><path d="M3.5 12C3.5 8.41015 6.41015 5.5 10 5.5C13.5899 5.5 16.5 8.41015 16.5 12C16.5 15.5899 13.5899 18.5 10 18.5C6.41015 18.5 3.5 15.5899 3.5 12ZM10 2.5C4.75329 2.5 0.5 6.75329 0.5 12C0.5 17.2467 4.75329 21.5 10 21.5C12.6243 21.5 15.0001 20.4359 16.7195 18.7156L25.4966 26.6149L27.5034 24.3851L18.488 16.2712C19.1354 14.9871 19.5 13.5362 19.5 12C19.5 6.75329 15.2467 2.5 10 2.5Z" /></svg>
+                <span>Søk</span>
+              </button>
+            </div>
+          </form>
+        </div>
+
       </div>
-    </div> #}
-    <div class="min-h-[50vh]"></div>
+    </div>
+
+  </div>
+
+  <div class="absolute inset-x-0 z-20 px-4 pt-6 pb-12 shadow-xl bg-deepblue-50 top-full md:px-8" x-bind:class="!loginOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
+    <div class="max-w-screen-xl mx-auto xs:w-[95%]">
+      <div class="grid max-w-sm md:ml-auto">
+        <h3 class="grid pb-4">
+          <span class="text-sm tracking-widest uppercase opacity-60">Logget inn som</span>
+          <span class="text-3xl font-semibold leading-tight">Isac Norland</span>
+        </h3>
+
+        <div class="pt-8 border-t border-blue-700/10">
+          <ul class="grid gap-2">
+            {% for group in menu.user %}
+              {% if loop.index > 1 %}
+                <li class="my-3 border-t border-deepblue-700/10"></li>
+              {% endif %}
+
+              {% for link in group.linkList %}
+                <li class="break-inside-avoid">
+                  <a class="inline-flex items-center gap-2 px-2 py-1.5 -mx-2 text-lg leading-normal text-blue-500 no-underline rounded font-semibold hover:bg-blue-800 hover:text-white hover:underline" href="#">
+                    {% if link.icon %}
+                      {{ link.icon | svgContents('w-6 h-6 opacity-90') | safe }}
+                    {% endif %}
+                    <span class="mt-px">{{ link.text }}</span>
+                  </a>
+                </li>
+              {% endfor %}
+            {% endfor %}
+          </ul>
+        </div>
+
+      </div>
+
+    </div>
   </div>
 </nav>
 
 {# Overlay #}
-<button class="fixed inset-0 z-10 hidden w-full h-full bg-black/20" x-bind:class="(menuOpen || searchOpen) ? 'opacity-0 animate-dropdown' : 'hidden'" x-on:click="menuOpen = false"></button>
+<button class="fixed inset-0 z-10 w-full h-full bg-black/20" x-bind:class="(menuOpen || loginOpen) ? 'opacity-0 animate-dropdown' : 'hidden'" x-on:click="menuOpen = false"></button>
