Correct AreaCard background

--- a/src/maler/forside.njk
+++ b/src/maler/forside.njk
@@ -99,7 +99,7 @@ order: 1
         <ul class="grid gap-3 mx-auto mt-4 grid-cols-areas md:gap-6">
           {% for service in home.servicesList %}
             <li class="">
-              <a class="relative flex items-center justify-between gap-4 bg-blue-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 hover:text-blue-500 hover:shadow-xl hover:bg-gray-100 focus:shadow-xl min-h-[8vh] md:min-h-[16vh] px-6 py-2 overflow-hidden group c-area-card" href="#">
+              <a class="relative flex items-center justify-between gap-4 bg-deepblue-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 hover:text-blue-500 hover:shadow-xl hover:bg-gray-100 focus:shadow-xl min-h-[8vh] md:min-h-[13vh] px-6 py-2 overflow-hidden group c-area-card" href="#">
                 <div class="text-xl md:text-2xl leading-snug font-semibold underline group-hover:no-underline flex-none max-w-[75%] md:max-w-[25ch]">
                   {{ service.title }}
                 </div>
